Mudança na imagem do doce

--- a/index.html
+++ b/index.html
@@ -24,7 +24,16 @@
         <i class="fa-solid fa-circle-info"></i>
         <i class="fa-solid fa-phone"></i>
     </div>
-</header>
+</header> 
 
-</body>
-</html>
+<section class="home" id="home">
+    <div class="container">
+        <img src="imagens/doce de morango.jpg" alt="Torta deliciosa feita de Morangos frescos..jpg" class="image">
+        <div class="text">
+            <h1>Título do Texto</h1>
+            <p>Este é um exemplo de texto que está localizado ao lado da imagem. Você pode adicionar mais conteúdo aqui, como parágrafos, listas, ou qualquer outro elemento HTML.</p>
+        </div>
+    </div>
+    
+    </body>
+    </html>
