--- a/index.html
+++ b/index.html
@@ -14,26 +14,23 @@
     <label for="toggler" class="fas fa-bars"></label>
 
     <a href="#" class="logo">Doceria Glamour<span>.</span></a>
-    <nav class="navbar">
-        <a href="#home">home</a>
-        <a href="#sobre">sobre</a>
-        <a href="#contato">contato</a>
     </nav>
     <div class="icons">
-        <i class="fa-solid fa-house"></i>
-        <i class="fa-solid fa-circle-info"></i>
-        <i class="fa-solid fa-phone"></i>
+        <i class="fa-solid fa-house"></i> <a href="index.html">home</a>
+        <i class="fa-solid fa-circle-info"></i>  <a href="sobre.html">sobre</a>
+        <i class="fa-solid fa-phone"></i><a href="contato.html">contato</a>
     </div>
 </header> 
 
 <section class="home" id="home">
     <div class="container">
-        <img src="imagens/doce de morango.jpg" alt="Torta deliciosa feita de Morangos frescos..jpg" class="image">
+        <img src="imagens/Cone trufado.jpg" alt="Cones trufados deliciosos..jpg" class="image">
         <div class="text">
-            <h1>Título do Texto</h1>
-            <p>Este é um exemplo de texto que está localizado ao lado da imagem. Você pode adicionar mais conteúdo aqui, como parágrafos, listas, ou qualquer outro elemento HTML.</p>
+            <h1>Transforme cada momento em um doce sonho!</h1>
+            <p>Bem-vindo à Doceria Glamuor, onde cada doce é uma obra-prima e cada mordida é um toque de elegância. Venha se perder em um mundo de sabores sofisticados e doces encantos!🍨🍫</p>
         </div>
     </div>
-    
+
     </body>
     </html>
+
