--- a/contato.html
+++ b/contato.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>  
+<html lang="pt-br">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Doceria Glamour</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+    <link rel="stylesheet" href="assets/styles.index.css">
 <body>
     <header>
         <input type="checkbox" name="" id="toggler">
 <label for="toggler" class="fas fa-bars"></label>
     <a href="#" class="logo">Contato<span>.</span></a>
-    <nav class="navbar">
-        <a href="index.html">Home</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="contato.html">Contato</a>
-</nav>
+    <nav>
+        <div class="icons">
+            <i class="fa-solid fa-house"></i> <a href="index.html">home</a>
+            <i class="fa-solid fa-circle-info"></i>  <a href="sobre.html">sobre</a>
+            <i class="fa-solid fa-phone"></i><a href="contato.html">contato</a>
+        </div>
     </header>
-    <body>
+    <main>
         <h1>Teve dúvidas? Entre em contato!</h1>
-        <form>
-            <fieldset>
-                <legend>Informações Pessoais</legend>
+        <form action="enviar.php" method="post">
+            <div class="form-group">
                 <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" placeholder="Digite seu nome" required maxlength="100">
+                <input type="text" id="nome" name="nome" required>
+            </div>
+            <div class="form-group">
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" placeholder="seuemail@seuemail.com" required>
-                <label for="descricao">Descrição:</label>
-                <textarea id="descricao" name="descricao"
-                rows="Deixe sua mensagem!" required></textarea>
-            </fieldset>
-            <button type="submit">Enviar</button>
+                <input type="email" id="email" name="email" required> 
+                <div class="form-group">
+                    <label for="mensagem">Mensagem:</label>
+                    <textarea id="mensagem" name="mensagem" rows="4" required></textarea>
+                    <div class="form-group">
+                        <input type="submit" value="Enviar">
+                </div> 
+            </div>
         </form>
-    </body>
-    </html>
-    
+    </main>
