--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <label for="toggler" class="fas fa-bars"></label>
 
     <a href="#" class="logo">Doceria Glamour<span>.</span></a>
+    <img class="logo" src="imagens/icone.png" alt="logo doce" />
     </nav>
     <div class="icons">
         <i class="fa-solid fa-house"></i> <a href="index.html">home</a>
