--- a/sobre.html
+++ b/sobre.html
@@ -11,7 +11,9 @@
     <header>
         <input type="checkbox" name="" id="toggler">
         <label for="toggler" class="fas fa-bars"></label>
-        <a href="#" class="logo">Doceria Glamour<span>.</span></a>
+        <p>
+            <img class="logo" src="imagens/icone.png" alt="logo doce" />
+            </p>
 
         <nav> 
             <div class="icons">
