--- a/sobre.html
+++ b/sobre.html
@@ -27,16 +27,16 @@
         <main>
             <h1>Olá, que bom te ver aqui! Conheça mais sobre <span class= "highlight"> a "DOCERIA GLAMOUR"</span>:</h1>
             <p>
-            </p>
+            <h3>
                 Bem-vindo(a)! Prepare-se para uma deliciosa jornada em busca do seu próximo doce favorito.
                 Este site foi desenvolvido por uma aluna de desenvolvimento de sistemas do Senai Valinhos, que tem uma verdadeira paixão por doces. Com o objetivo de ajudar os amantes de doces a encontrarem novas delícias, ela criou este espaço para você explorar e descobrir sabores irresistíveis, seja qual for a sua preferência.
-            </p>
+            <h3>
             </main>
             <div class="circular-image">
             <img src="imagens/minhafoto2.jpg">
             </div>
         <footer>
-            <p>Desenvolvido pela aluna <a target="_blank" href="https://instagram.com/Julia.s.neves"> Julia Neves</a></p>
+            <p class="centralize-text">Desenvolvido pela aluna</p><a target="_blank" href="https://instagram.com/Julia.s.neves" class="centralize-link">Julia Neves</a>
         </footer>
     </section>
 </body>
